💄 Fix container width on mobile

--- a/src/style/base/_reusables.sass
+++ b/src/style/base/_reusables.sass
@@ -8,7 +8,7 @@
 
 =container
   width: calc(70% + 10rem) // EDIT HERE
-  max-width: 100%
+  max-width: calc(100% - 2rem)
   margin-right: auto
   margin-left: auto
   display: flow-root
